[package]
name = "RAN"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chacha20 = "0.9"
rand = "0.8"
rayon = "1.10"
rsa = "0.9"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
walkdir = "2.5"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.28", features = ["default"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }