[package]
name = "dec"
version = "1.0.0"
edition = "2024"

[dependencies]
chacha20 = "0.9"
rsa = { version = "0.9", features = ["sha2", "pem"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
base64 = "0.21"
rayon = "1.8"
walkdir = "2.4"
anyhow = "1.0"
rand = "0.8"