[package]
name = "RAN"
version = "1.0.0"
edition = "2024"
repository = "https://github.com/Jawollo07/RAN.git"
authors = ["Jawollo07"]
[dependencies]
aes-256-gcm = "1.1.2"
anyhow = "1.0.102"
async-std = "1.13.2"
base64 = "0.22.1"
bincode = "1.3.3"
chacha20 = "0.10.0"
eframe = "0.34.3"
hex-literal = "1.1.0"
rand = "0.8.5"
rayon = "1.12.0"
reqwest = "0.13.4"
rsa = { version = "0.9", features = ["sha2"] }
serde = "1.0.228"
sha2 = "0.10"
tokio = { version = "1.52.3", features = ["full"] }
walkdir = "2.5.0"
